[package]
name = "twitter_searcher"
version = "0.1.0"
authors = ["nekomaho <nekosatoru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "3.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
unicode-normalization = "0.1.8"
serde_json = "1.0"
regex = "1"
yaml-rust = "0.4.5"
